<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/send_collect_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/send_money_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/send_money"
            android:textColor="@color/accent"
            android:drawableTop="@drawable/wallet_icon"
            android:background="@drawable/round_white_bg"
            android:drawablePadding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/collect_money_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/collect_money"
            android:textColor="@color/accent"
            android:drawableTop="@drawable/wallet_icon"
            android:background="@drawable/round_white_bg"
            android:drawablePadding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"/>

    </LinearLayout>

    <TextView
        android:id="@+id/balance_enquiry_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_collect_ll"
        android:layout_weight="0.5"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/balance_enquiry"
        android:textColor="@color/accent"
        android:background="@drawable/round_white_bg"
        android:layout_margin="@dimen/activity_vertical_margin"/>


</RelativeLayout>