<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/account_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/round_white_bg"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/account_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/account_id"
                    android:textColor="@color/accent" />

                <EditText
                    android:id="@+id/account_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Enter account id"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/merchant_id_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/round_white_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/merchant_id_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/merchant_id"
                    android:textColor="@color/accent" />

                <EditText
                    android:id="@+id/merchant_id_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Enter Merchant Id"
                    android:padding="14dp"
                    android:textColor="@color/accent"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/amount_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/round_white_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/amount_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/amount"
                    android:textColor="@color/accent" />

                <EditText
                    android:id="@+id/amount_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Enter Amount"
                    android:padding="14dp"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/round_white_bg"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/address"
                    android:textColor="@color/accent" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Enter address"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bank_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/round_white_bg"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/bank_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/address"
                    android:textColor="@color/accent" />

                <EditText
                    android:id="@+id/bank_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Enter address"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/accent"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/pay_collect_confirm_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/round_white_bg"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/pay"
        android:textColor="@color/accent"
        android:textSize="16sp" />


</RelativeLayout>